--- a/roles/ui-tools/templates/config.user.inc.php.j2
+++ b/roles/ui-tools/templates/config.user.inc.php.j2
@@ -1,14 +1,9 @@
 <?php
-{% for user in users %}
-// {{ user.user }} - {{ user.dbs | join(', ') }}
-$cfg['Servers'][{{ loop.index }}]['host'] = '192.168.100.144';
-$cfg['Servers'][{{ loop.index }}]['port'] = '6033';
-$cfg['Servers'][{{ loop.index }}]['auth_type'] = 'cookie';
-$cfg['Servers'][{{ loop.index }}]['verbose'] = '{{ user.user }} ({{ user.dbs | join(", ") }})';
-{% if user.dbs[0] != '*' %}
-$cfg['Servers'][{{ loop.index }}]['only_db'] = {{ user.dbs | to_json }};
-{% endif %}
+// Server mặc định qua ProxySQL
+$cfg['Servers'][1]['host'] = '192.168.100.144';
+$cfg['Servers'][1]['port'] = '6033';
+$cfg['Servers'][1]['auth_type'] = 'cookie';
+$cfg['Servers'][1]['verbose'] = 'MySQL via ProxySQL';
 
-{% endfor %}
-// Cho phép nhập server tùy ý
-$cfg['AllowArbitraryServer'] = true;
+// Tắt arbitrary server
+$cfg['AllowArbitraryServer'] = false;
