--- a/roles/ui-tools/templates/docker-compose.yml.j2
+++ b/roles/ui-tools/templates/docker-compose.yml.j2
@@ -41,6 +41,20 @@ services:
     networks:
       - ui-network
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    restart: always
+    ports:
+      - "{{ pgadmin_port }}:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL={{ pgadmin_email }}
+      - PGADMIN_DEFAULT_PASSWORD={{ pgadmin_password }}
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    networks:
+      - ui-network
+
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -108,6 +122,7 @@ services:
 
 volumes:
   redisinsight-data:
+  pgadmin-data:
 
 networks:
   ui-network:
